# fortress-cli

./: README.md
fortress/: Cargo.toml  plaintext.txt
fortress/src/: main.rs
fortress/src/fortress_lib/: mod.rs
