[package]
name = "fortress-cli"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Gheorghiu : andreigheorghiu99@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
rand = "0.8.5"
pbkdf2 = "0.12.2"
sha2 = "0.10.7"